# pulumi-docker

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  CHANGELOG_OLD.md  CONTRIBUTING.md  Gopkg.toml  Makefile  Makefile.github  README.md  codecov.yml  devbox.json  go.mod  go.sum  mise.toml  renovate.json5  resources.go
.claude/: CLAUDE.md
.config/: mise.toml
.github/: copilot-instructions.md
docker/: Makefile  docker.ts  docker_test.go  image.ts  index.ts  package.json  tsconfig.json
docs/: _index.md  installation-configuration.md
examples/: dockerfile_test.go  examples_dotnet_test.go  examples_go_test.go  examples_java_test.go  examples_nodejs_test.go  examples_py_test.go  (+6 more)
sdk/python/: Pulumi.yaml  README.md  README.rst  pyproject.toml  setup.py
sdk/python/pulumi_docker/: README.md  __init__.py  _enums.py  _inputs.py  _tables.py  buildx_builder.py  config.py  container.py  docker.py  get_logs.py  get_network.py  get_plugin.py  get_registry_image.py  get_registry_image_manifests.py  get_remote_image.py  image.py  network.py  outputs.py  plugin.py  provider.py  pulumi-plugin.json  registry_image.py  remote_image.py  secret.py  service.py  service_config.py  tables.py  tag.py  utils.py  volume.py
sdk/python/pulumi_docker/buildx/: __init__.py  _enums.py  _inputs.py  image.py  index.py  outputs.py
sdk/python/pulumi_docker/config/: README.md  __init__.pyi  outputs.py  vars.py
sdk/python/pulumi_docker/swarm/: __init__.py  config.py  secret.py  service.py
(+1226 files in other folders)
